pgsql-manifest/deploy-pgsql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgresql
    app.kubernetes.io/component: postgresql
    app.kubernetes.io/instance: postgresql
    app.kubernetes.io/name: postgresql
  name: postgresql
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: postgresql
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: postgresql
    spec:
      containers:
      - env:
        - name: POSTGRESQL_DATABASE
          value: my_wiki
        - name: POSTGRESQL_PASSWORD
          value: passwd
        - name: POSTGRESQL_USER
          value: wikiuser
        image: image-registry.openshift-image-registry.svc:5000/openshift/postgresql
        imagePullPolicy: IfNotPresent
        name: postgresql
        ports:
        - containerPort: 5432
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: pgsql-storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: pgsql-storage
        persistentVolumeClaim:
          claimName: pgsql-pv-claim
