pgsql-manifest/svc-mediawiki.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mediawiki
    app.kubernetes.io/component: mediawiki
    app.kubernetes.io/instance: mediawiki
    app.kubernetes.io/name: php
  name: mediawiki
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deployment: mediawiki
  sessionAffinity: None
  type: ClusterIP
