pgsql-manifest/svc-pgsql.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgresql
    app.kubernetes.io/component: postgresql
    app.kubernetes.io/instance: postgresql
    app.kubernetes.io/name: postgresql
  name: postgresql
spec:
  ports:
  - name: 5432-tcp
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    deployment: postgresql
  sessionAffinity: None
  type: ClusterIP
