pgsql-manifest/mediawiki-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: mediawiki
    app.kubernetes.io/component: mediawiki
    app.kubernetes.io/instance: latest
    app.kubernetes.io/name: php
  name: mediawiki
  namespace: mediawiki-gitops
spec:
  host: mediawiki-mediawiki-gitops.ocpcluster-5bde58e3d6d567e3c92634c0d6b4f48b-0000.sng01.containers.appdomain.cloud
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: mediawiki
    weight: 100
  wildcardPolicy: None
